--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -1,7 +1,7 @@
 /* pages/indexo/indexo.wxss */
 @import '../member/member.wxss';
 .search{
-background-color:#f5f5f5;
+background-color:#f4f8fb;
 width:610rpx;
 height:75rpx;
 border-radius:30rpx;
@@ -14,7 +14,7 @@ font-size:28rpx;
   border-radius: 10rpx;
 }
 .search2{
-background-color:#f5f5f5;
+background-color:#f4f8fb;
 width:470rpx;
 height:75rpx;
 border-radius:30rpx;
@@ -58,7 +58,7 @@ margin-left:15rpx;
   position: fixed;
   z-index: 4;
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: #f4f8fb;
   top:230rpx;
 }
 .recom2{
@@ -83,7 +83,7 @@ display: flex;
   display: inline-block;
 }
 page{
-  background-color: #f5f5f5;
+  background-color: #f4f8fb;
   height: 100%;
   width: 100%;
 }
@@ -146,18 +146,18 @@ padding-top:230rpx;
 .kinds{
   display: flex;
   flex-direction: column;
-  width: 710rpx;
+  width: 750rpx;
   background-color: #fff;
-  margin-left: 20rpx;
   margin-top:40rpx;
 }
 .kinds-img{
   width: 100%;
-  height: 700rpx;
+  height: 750rpx;
 }
 .kinds-title{
-  margin-top: 10rpx;
-  height: 135rpx;
+  margin-top: 30rpx;
+  height: 165rpx;
+  line-height: 45rpx;
   font-size: 30rpx;
   margin-left: 15rpx;
   width: 675rpx;
@@ -172,4 +172,8 @@ padding-top:230rpx;
 .video{
   width: 690rpx;
   height: 517rpx;
+}
+.content-image{
+  width: 750rpx;
+  height: 750rpx;
 }
