--- a/pages/indexo/kind.wxml
+++ b/pages/indexo/kind.wxml
@@ -1,5 +1,5 @@
 <wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
-<view wx:if="{{curId!=0}}" style='padding-top:340rpx;' class='body'>
+<view  style='padding-top:340rpx;' class='body'>
   <view bindtap='goDetail' data-id='{{item.id}}' wx:key="{{item.id}}" class='kinds' wx:for="{{list}}">
     <swiper wx:if="{{item.video==null}}" indicator-active-color="#58d1d3" indicator-dots="true" circular='false' class="kinds-img">
       <swiper-item wx:key="{{index}}" wx:for="{{item.img}}" class="kinds-img">
