--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -8,7 +8,7 @@ border-radius:30rpx;
 margin-left:40rpx;
 padding-left:60rpx;
 font-size:28rpx;
-
+margin-top: 15rpx;
 }
 .radius{
   border-radius: 10rpx;
@@ -21,20 +21,32 @@ border-radius:30rpx;
 margin-left:40rpx;
 padding-left:60rpx;
 font-size:28rpx;
+margin-top: 15rpx;
 }
 .cancel{
   font-size: 30rpx;
-  margin-top:16rpx;
+  margin-top:30rpx;
 margin-left:15rpx;
 
 }
 .cancel2{
   font-size: 30rpx;
-  margin-top:16rpx;
+  margin-top:30rpx;
   margin-left:50rpx;
 
 }
 .nav{
+  background-color: #fff;
+  width: 100%;
+  /* padding-bottom:20rpx; */
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  z-index: 999;
+  /* top: 140rpx; */
+
+}
+.nav2{
   background-color: #fff;
   width: 100%;
   padding-bottom:20rpx;
@@ -44,6 +56,11 @@ margin-left:15rpx;
   z-index: 999;
   top: 140rpx;
 
+}
+.top2{
+  position: fixed;
+  background-color: #fff;
+  width: 100%;
 }
 .search-p{
   margin-left: 10rpx;
@@ -58,19 +75,35 @@ margin-left:15rpx;
   position: fixed;
   z-index: 4;
   width: 100%;
-  background-color: #f4f8fb;
-  top:230rpx;
+  background-color: #fff;
+  /* top:230rpx; */
+}
+.top-pad{
+  position: fixed;
+  background-color: #fff;
+  z-index: 9;
+  width: 100%;
+  top:0;
+  height: 20px;
 }
 .recom2{
-  position: fixed;
-  z-index: 4;
+  /* position: fixed;
+  z-index: 4; */
   width: 100%;
   background-color: #fff;
  
 }
+.nav-wrap2 {
+  /* position: fixed; */
+  width: 100%;
+  top: 0;
+  background: #fff;
+  color: #000;
+  z-index: 997;
+}
 .recommend{
 width:690rpx;
-height:90rpx;
+height:100rpx;
 /* box-shadow: 1px 1px 25rpx #f5f5f5; */
 margin-left: 30rpx;
 margin-top:20rpx;
@@ -129,7 +162,7 @@ padding-top:230rpx;
 }
 .topone{
   background-color: #fff;
-  height: 230rpx;
+  /* height: 230rpx; */
   position: fixed;
   width: 100%;
   z-index: 2;
@@ -159,8 +192,9 @@ padding-top:230rpx;
   height: 165rpx;
   line-height: 45rpx;
   font-size: 30rpx;
-  margin-left: 15rpx;
-  width: 675rpx;
+  margin-left:30rpx;
+width:690rpx;
+
 }
 .swiper {
   width: 100%;
