--- a/pages/hospital/hospital.wxml
+++ b/pages/hospital/hospital.wxml
@@ -4,6 +4,11 @@
   <cover-view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>海草日记</cover-view>
 </cover-view>
 <view style='height:{{height4*2+20}}px;' class='pad'></view>
+<view  class='wait' wx:if="{{list==''}}">
+  <image mode='widthFix' src='../../images/loading.svg'></image>
+  <view class='f28 ml38'>加载中</view>
+</view>
+<view wx:else>
 <navigator hover-class='none' url='../hosdetail/hosdetail?id={{item.id}}' class='hospitals r1' wx:for="{{list}}" wx:key="{{item.id}}">
   <view class='col hos-head'>
     <image mode='aspectFill' class='hos-headimg' src='{{item.headimg.path}}'></image>
@@ -11,7 +16,8 @@
   </view>
   <view class='col hos-na'>
     <view class='hos-name'>{{item.name}}</view>
-    <text wx:if="{{item.address.length<70}}" class='hos-address'>{{item.address}}</text>
-    <text wx:else class='hos-address'>{{filter.Limit3(item.address,70)}}</text>
+    <text wx:if="{{item.address.length<65}}" class='hos-address'>{{item.address}}</text>
+    <text wx:else class='hos-address'>{{filter.Limit3(item.address,65)}}</text>
   </view>
 </navigator>
+</view>
