--- a/pages/hosdetail/hosdetail.wxss
+++ b/pages/hosdetail/hosdetail.wxss
@@ -1,1 +1,52 @@
 /* pages/hosdetail/hosdetail.wxss */
+.swiper{
+  width: 100%;
+  height: 500rpx;
+}
+.swiper-item{
+  width: 100%;
+  height: 500rpx;
+}
+.doctor{
+  padding-bottom: 20rpx;
+  padding-top: 20rpx;
+  border-bottom: 1rpx solid #f5f5f5;
+}
+.img{
+  width: 180rpx;
+  height: 180rpx;
+}
+.license{
+  color:#58c2db;
+ 
+}
+.line2{
+  width: 250rpx;
+  height: 1rpx;
+  background-color: #58c2db;
+  margin-left: 250rpx;
+}
+.text{
+  display: block;
+}
+.line3{
+  width: 750rpx;
+  height: 20rpx;
+  background-color: #f4f8fb;
+  
+}
+.more{
+  position: absolute;
+  right: 20rpx;
+  margin-top:-28rpx;
+}
+.contain{
+  padding-bottom: 30rpx;
+}
+.line{
+  width: 1rpx;
+  height: 26rpx;
+  background-color: #686767;
+  margin-top:7rpx;
+
+}
