--- a/pages/hosdetail/hosdetail.wxss
+++ b/pages/hosdetail/hosdetail.wxss
@@ -50,3 +50,17 @@
   margin-top:7rpx;
 
 }
+.h1{
+  height: 190rpx;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  overflow: hidden;
+}
+.h2{
+  height: auto;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
