--- a/pages/doctor/doctor.wxml
+++ b/pages/doctor/doctor.wxml
@@ -13,17 +13,31 @@
   </view>
 </view>
 <view style='height:{{height4*2+20}}px;' class='pad'></view>
-<navigator hover-class='none' url='../hosdetail/hosdetail?id={{item.id}}' class='hospitals r1' wx:for="{{doctors}}" wx:key="{{item.id}}">
-  <view class='col hos-head'>
-    <image mode='aspectFill' class='hos-headimg' src='{{item.headimg.path}}'></image>
-  </view>
-  <view class='col hos-na f30'>
-    <view class='r1'>
-    <view class='hos-name'>{{item.name}}</view>
-    <view class='c8a ml30 mt5'>{{item.job}}</view>
+<view class='wait' wx:if="{{doctors==''}}">
+  <image mode='widthFix' src='../../images/loading.svg'></image>
+  <view class='f28 ml38'>加载中</view>
+</view>
+<view wx:else>
+  <navigator hover-class='none' url='../hosdetail/hosdetail?id={{item.id}}' class='hospitals r1' wx:for="{{doctors}}" wx:key="{{item.id}}">
+    <view class='col hos-head'>
+      <image mode='aspectFill' class='hos-headimg' src='{{item.headimg.path}}'></image>
     </view>
-    <view class='c8a mt20'>{{item.hospital_name}}</view>
-    <view class='b mt15'>案例：{{item.time}}</view>
-    <view class='ce5 mt15'>{{item.superiority}}</view>
-  </view>
-</navigator>
+    <view class='col hos-na f30'>
+      <view class='r1'>
+        <view class='hos-name'>{{item.name}}</view>
+        <view class='c8a ml30 mt5'>{{item.job}}</view>
+      </view>
+      <view class='c8a mt20'>{{item.hospital_name}}</view>
+      <view class='b mt15'>案例：{{item.time}}</view>
+      <view class='ce5 mt15 r1 '>
+        <view style='font-size:32rpx;' class='iconfont icon-jiangzhangxunzhang'></view>
+        <text class='sitem'>
+        <text wx:key="{{index}}" wx:for="{{item.superiority}}" class='ml20'>
+          {{item}}
+        </text>
+        </text>
+      </view>
+    </view>
+  </navigator>
+
+</view>
