--- a/pages/doctorDetail/doctorDetail.wxss
+++ b/pages/doctorDetail/doctorDetail.wxss
@@ -5,13 +5,65 @@
   border-radius: 50%;
 }
 .certificate{
-  width: 550rpx;
-  background-color: #f5f5f5;
-  margin-left:100rpx;
-height:43rpx;
-font-size:26rpx;
-padding-top:10rpx;
+background-color: #f5f5f5;
+font-size:24rpx;
+padding-top:15rpx;
 border-radius:30rpx;
-white-space: normal;
+white-space:normal;
+padding-left:20rpx;
+padding-right:20rpx;
+padding-bottom:15rpx;
+margin-top:20rpx;
+width:600rpx;
+margin-left:55rpx;
 
+}
+.ditem{
+  left: 55rpx;
+}
+.ditem2{
+  left: 275rpx;
+}
+.ditem3{
+  right:55rpx;
+}
+.line2{
+  width: 750rpx;
+  height: 20rpx;
+  background-color: #f5f5f5;
+}
+.img2{
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 50%;
+}
+.line3{
+  width: 100%;
+  height: 1rpx;
+  background-color: #f5f5f5;
+}
+.padding{
+  padding-bottom: 50rpx;
+}
+.address{
+  width: 600rpx;
+}
+.text2{
+ width:695rpx;
+ 
+
+}
+.h1{
+  height: 190rpx;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  overflow: hidden;
+}
+.h2{
+  height: auto;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
