--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -152,7 +152,7 @@
     <view class='line'>
     </view>
     <view style='position:absolute;left:475rpx;' class='r1'>
-      <button  open-type="share" bindtap='onShareAppMessage' class='share'>
+      <button   bindtap='onShare' class='share'>
         <view style='color:#1bad1a;font-size:50rpx;' class='iconfont icon-weixin'>
           <span class="share-1" >分享</span>
         </view>
