--- a/pages/doctor/doctor.wxml
+++ b/pages/doctor/doctor.wxml
@@ -18,24 +18,24 @@
   <view class='f28 ml38'>加载中</view>
 </view>
 <view wx:else>
-  <navigator hover-class='none' url='../hosdetail/hosdetail?id={{item.id}}' class='hospitals r1' wx:for="{{doctors}}" wx:key="{{item.id}}">
+  <navigator hover-class='none' url='../doctorDetail/doctorDetail?id={{item.id}}' class='hospitals r1' wx:for="{{doctors}}" wx:key="{{item.id}}">
     <view class='col hos-head'>
       <image mode='aspectFill' class='hos-headimg' src='{{item.headimg.path}}'></image>
     </view>
     <view class='col hos-na f30'>
       <view class='r1'>
         <view class='hos-name'>{{item.name}}</view>
-        <view class='c8a ml30 mt5'>{{item.job}}</view>
+        <view class='cc5 b ml30 mt5'>{{item.job}}</view>
       </view>
-      <view class='c8a mt20'>{{item.hospital_name}}</view>
+      <view class='cc5 b mt20'>{{item.hospital_name}}</view>
       <view class='b mt15'>案例：{{item.time}}</view>
-      <view class='ce5 mt15 r1 '>
+      <view class='ce5 mt15 r1 sitem'>
         <view style='font-size:32rpx;' class='iconfont icon-jiangzhangxunzhang'></view>
-        <text class='sitem'>
-        <text wx:key="{{index}}" wx:for="{{item.superiority}}" class='ml20'>
+        <!-- <text class='sitem'> -->
+        <view wx:key="{{index}}" wx:for="{{item.superiority}}" class='ml20'>
           {{item}}
-        </text>
-        </text>
+        </view>
+        <!-- </text> -->
       </view>
     </view>
   </navigator>
